--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Horizons
 description: The 14th Cross-Strait Workshop on “Nano Science and Technology”
 paginate: 10
-baseurl: '/CSWNST14'
+baseurl: ''
